--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h1 {
   }
 }
 
+.dedicado {
+  font-style: italic;
+  color: rgb(255, 255, 255);
+  margin-top: 20px;
+}
 
 h1:hover {
   text-shadow: 0px 0px 10px #1ebde9, 
