--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,6 @@ h1 {
   }
 }
 
-.dedicado {
-  font-style: italic;
-  color: rgb(255, 255, 255);
-  margin-top: 20px;
-}
-
 h1:hover {
   text-shadow: 0px 0px 10px #1ebde9, 
     0px 0px 20px #45eae5, 
@@ -99,4 +93,18 @@ button:hover {
     transform: translateY(100%);
     opacity: 0;
   }
+}
+
+footer {
+  background-color: black;;
+  padding: 10px;
+  text-align: center;
+  font-size: 30px;
+  margin-top: 50px;
+  color: white;
+}
+
+footer p {
+  margin: 0;
+  font-style: 'Mynerve', cursive;
 }
