--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ button:hover {
 }
 
 footer {
-  background-color: black;;
+  background-color: black;
   padding: 10px;
   text-align: center;
   font-size: 30px;
