--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ h1 {
   }
 }
 
+
 h1:hover {
   text-shadow: 0px 0px 10px #1ebde9, 
     0px 0px 20px #45eae5, 
@@ -55,7 +56,7 @@ button:hover {
 
 #reason {
   font-family: 'Mynerve', cursive;
-  margin-top: 60px;
+  margin-top: 50px;
   font-size: 24px;
   color: white;
 }
@@ -99,12 +100,12 @@ footer {
   background-color: black;
   padding: 10px;
   text-align: center;
-  font-size: 30px;
-  margin-top: 50px;
+  font-size: 20px;
+  margin-top: 200px;
   color: white;
+  font-family: 'Mynerve', cursive;
 }
 
 footer p {
   margin: 0;
-  font-style: 'Mynerve', cursive;
 }
